--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Libraries/googletest"]
 	path = Libraries/googletest
 	url = https://github.com/google/googletest
+[submodule "Libraries/random"]
+	path = Libraries/random
+	url = https://github.com/effolkronium/random
