--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Libraries/random"]
 	path = Libraries/random
 	url = https://github.com/effolkronium/random
+[submodule "Libraries/json"]
+	path = Libraries/json
+	url = https://github.com/nlohmann/json
