--- a/.travis.yml
+++ b/.travis.yml
@@ -64,5 +64,7 @@ matrix:
       script:
         - sh Scripts/travis_build.sh
 
-  before_install:
-    - eval "${MATRIX_EVAL}"
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - eval "${MATRIX_EVAL}"
